--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -18,11 +18,11 @@ ul {
   }
   
   li a:hover {
-    background-color: #4eb9cc;
+    background-color: #f80404;
   }
   
   .activo {
-    background-color: #20597d;
+    background-color: #e97a7a;
   }
   
   .derecha {
@@ -32,7 +32,7 @@ ul {
   .miJumbo {
     margin-top: 1rem;
     padding: 32px 16px;
-    background-color: #206dba;
+    background-color: #c55d5d;
     border-radius: 0.5rem;
     text-align: center;
     color: aliceblue;
